--- a/TODO
+++ b/TODO
@@ -1,27 +1,11 @@
-planned features:
+Planned features
 
-	* wave++: use Texinfo for the documentation?
-	* wave++: use X11 resources instead of wmndrc.
-	* wave++: selectively include drivers by specifying the -D flag
-	multiple times.
-	* wave++: per-interface options (long names, etc)
-	* wave++: per-display options (scroll speed, etc)
-	* wave++: the driver subsystem really needs a rewrite to support
-	these new concepts.
-	* wave++: snmp driver could use a single session instance. I need
-	per-driver termination handlers.
+	* wave++: use X11 resources instead of wmndrc?
+
+	* wave++: selectively include drivers and specify driver options by
+	  specifying the -D flag multiple times (something like -Ddriver:params
+	  and remove the per-driver -I management).
+
+	* wave++: the snmp driver could use a single session instance.
+
 	* Jeff Greenfield: logarithmic graph scale.
-
-completed since release 0.4.3:
-
-	* wave++: the stats about the current speed twinkle too fast if
-	a fast refresh is set. Make it independent and configurable.
-
-completed since release 0.4.1:
-
-	* Arthur Korn: rewrite the man page of wmnd
-
-completed since release 0.4.0:
-
-	* wave++: use autoconf/automake
-
